# openstetho

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DISCLAIMER.md  LICENSE  PROVENANCE.md  README.md  THIRD_PARTY_NOTICES.md
docs/: murmur_detector_benchmark.md  real_validation_results.md  s3_annotation_pipeline.md  s3_annotation_protocol.md
model/: .gitignore  README.md  pyproject.toml
model/benchmarks/: murmur_baseline.json
model/benchmarks/scorecards/: logmel_5s_aug.json  logmel_5s_auroc_select.json  logmel_5s_bce_f1.json  logmel_5s_distill_w010.json  logmel_5s_distill_w020.json  logmel_5s_distill_w050.json  logmel_5s_distill_w100.json  logmel_5s_ensemble3.json  logmel_5s_teacher_w020.json
model/openstetho_model/: __init__.py  bench_murmur.py  compute_kappa.py  cv_murmur.py  dash_s3.py  dataset.py  dataset_2016.py  ensemble_oof.py  export.py  export_cycle_clips.py  export_ensemble.py  export_s3.py  model.py  pcg_augment.py  predict_wav.py  preprocess.py  regression_gate.py  s3_dataset.py  s3_inject.py  s3_synth.py  s4_synth.py  score_corpus.py  scorecard.py  segment.py  select_for_annotation.py  springer.py  ssl_dataset.py  ssl_pretrain.py  ssl_probe.py  threshold_sweep.py  thresholds.py  train.py  train_s3.py  validate_clips.py
model/tests/: test_confounders.py  test_export_ensemble.py  test_kappa.py  test_parity.py  test_pcg_augment.py  test_preprocess.py  test_regression_gate.py  test_s3_dataset.py  test_s3_inject.py  test_s3_synth.py  test_s4_synth.py  test_segment.py  test_springer.py  test_train_recording.py
model/tests/fixtures/: mel_rust_60hz.txt
scripts/: download_circor.sh  download_pascal_2011.sh  download_physionet_2016.sh  download_s3_validation.sh  download_uw_heart_sounds.sh  package_model_release.sh  prepare_michigan_heart_sounds.sh
stetho-cli/: Cargo.toml
stetho-cli/src/: main.rs
stetho-core/: Cargo.toml
stetho-core/examples/: dump_mel_parity.rs
stetho-core/src/: lib.rs
stetho-core/src/ble/: mod.rs  uuids.rs
stetho-core/src/codec/: adpcm.rs  mod.rs
stetho-core/src/dsp/: biquad.rs  biquad_reference.rs  mains.rs  mel.rs  mod.rs  presets.rs
stetho-core/tests/: adpcm_capture.rs  biquad_parity.rs
stetho-ui/: Cargo.toml
stetho-ui/examples/: probe_model.rs
stetho-ui/src/: inference.rs  main.rs
