[package]
name = "stetho-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "stetho"
path = "src/main.rs"

[dependencies]
stetho-core = { path = "../stetho-core" }
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
hound.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
btleplug.workspace = true
futures = "0.3"
uuid.workspace = true
