[package]
name = "stetho-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "stetho-ui"
path = "src/main.rs"

[dependencies]
stetho-core = { path = "../stetho-core" }
serde_json = "1"
eframe.workspace = true
egui.workspace = true
egui_plot.workspace = true
crossbeam-channel.workspace = true
tokio.workspace = true
btleplug.workspace = true
futures = "0.3"
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
ureq = { version = "2", default-features = false, features = ["tls"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "macos")'.dependencies]
coreml-native = "0.2"
